--- a/css/style.css
+++ b/css/style.css
@@ -691,5 +691,195 @@ z-index: 20;
    	left:   -30px;
    	z-index: 8;
 }
+.contacts{
+	background-color: #000000;
+}
+.contacts .container{
+	padding-top: 54px;
+}
+.contacts .data{
+	width: 33.333333%;
+	min-width: 33.333333%;
+	padding-bottom: 90px;
+
+}
+.contacts .data .title{
+	  font-family: Roboto;
+  font-size: 80px;
+  font-weight: 900;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 0.98;
+  letter-spacing: normal;
+  text-align: left;
+  color: #ffffff;
+}
+.contacts .data .title span{
+	  -webkit-text-stroke: 1px #ffffff;
+  font-family: Roboto;
+  font-size: 76px;
+  color: transparent;
+  line-height: 0.80;
+
+}
+.contacts .data .adress{
+	 font-family: Roboto;
+	  font-size: 20px;
+  font-weight: 300;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  text-align: left;
+  color: #ffffff;
+  margin-top: 60px;
+}
+.contacts .data .adress span{
+	display: block;
+  font-family: Roboto;
+  font-size: 24px;
+  font-weight: 500;
+  padding-top: 8px;
+}
+.contacts .data .phone{
+	 font-family: Roboto;
+	  font-size: 20px;
+  font-weight: 300;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  text-align: left;
+  color: #ffffff;
+  margin-top: 42px;
+}
+.contacts .data .phone span{
+	display: block;
+	  font-size: 32px;
+  font-weight: 500;
+  padding-top: 8px;
+}
+.contacts .data .social{
+		 font-family: Roboto;
+	  font-size: 20px;
+  font-weight: 300;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  text-align: left;
+  color: #ffffff;
+  margin-top: 42px;
+}
+.contacts .data .social_icons{
+	margin-top: 13px;
+
+}
+.contacts .data .social_icons img{
+margin-right: 20px;
+}
+.aplication{
+	width: 66.66666%;
+	min-width: 66.66666%;
+	
+
+
+}
+.aplication .aplication_box{
+
+  position: relative;
+  z-index: 10;
+  margin-left: 100px;
+	
+}
+
+.aplication .aplication_box::before {
+	content: '';
+	display: block;
+	width: 148px;
+  	height: 148px;
+   	background-color: #6dcc0e;
+   	position: absolute;
+   	top: -14px;
+   	right: -14px;
+   	z-index: 8;
+}
+.aplication .aplication_box::after {
+	content: '';
+	display: block;
+	width: 250px;
+  	height: 250px;
+   	background-color: #6dcc0e;
+   	position: absolute;
+   	bottom:  -30px;
+   	left:   -30px;
+   	z-index: 8;
+}
+.aplication .aplication_box .aplication_form{
+	
+
+	background-color: #ffffff;
+	margin: 0 0 0 auto;
+	padding: 25px;
+	position: relative;
+	z-index: 10;
+	  box-shadow: 0 4px 20px 0 rgba(0, 0, 0, 0.25);
+
+
+	
+}
+.aplication .aplication_form .form_title{
+	  font-family: Roboto;
+  font-size: 32px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  text-align: left;
+  color: #000000;
+}
+.aplication .aplication_form .form_title span{
+	  font-weight: bold;
+  color: #6dcc0e;
+}
+.aplication .aplication_form  input{
+	border: none;
+	width: 100%;
+  height: 62px;
+  border-bottom: 2px solid #000000;
+  margin-top: 40px;
+    font-family: Roboto;
+  font-size: 16px;
+  font-weight: 500;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  text-align: left;
+  color: #999999;
+
+}
+.aplication .aplication_form button{
+	  width: 100%;
+  height: 56px;
+	border: none;
+	  border-radius: 4px;
+  box-shadow: 0 4px 20px 0 rgba(0, 0, 0, 0.15);
+  background-color: #6dcc0e;
+    font-family: Roboto;
+  font-size: 24px;
+  font-weight: 500;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  text-align: center;
+  color: #ffffff;
+  margin-top: 43px;
+
+}
+
+
 
 
