--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@ body {
 	margin:0 auto;
 	
 }
+
 .header {
 	position: fixed;
 	height: 72px;
@@ -30,6 +31,124 @@ body {
 	align-items:center;
 	
 }
+.header__menu-toggle  {
+  position: relative;
+  width:40px;
+  min-width: 40px;
+  height: 40px;
+  margin-right:16px;
+  border-radius:4px;
+  transition:0.3s;
+  cursor: pointer;
+  margin: 0 0 0 auto;
+}
+  @media screen and (min-width: 768px){
+    .header__menu-toggle {
+      display: none!important;
+    }
+    
+  }
+.header__menu-toggle:hover {
+  background: #4e4c4c;
+  transition:0.3s;
+}
+.header__menu-toggle:active {
+  background: #4e4c4c;
+  transition:0.3s;
+}
+.header__menu-toggle > div {
+  width:24px;
+  height: 2px;
+  background:#fff;
+  top:50%;
+  position:absolute;
+  left:50%;
+  transform:translateX(-50%);
+  transition:0.3s;
+}
+.header__menu-toggle > div:nth-child(1) {
+  top:12px;
+}
+.header__menu-toggle > div:nth-child(3) {
+  top:calc(100% - 12px);
+
+}
+
+
+.header__menu-toggle.opened > div:nth-child(2) {
+  display: none;
+}
+
+.header__menu-toggle.opened > div:nth-child(1) {
+  transform:translateX(-50%) rotate(45deg);
+  top:50%;
+  transition:0.3s;
+}
+
+.header__menu-toggle.opened > div:nth-child(3) {
+  transform:translateX(-50%) rotate(-45deg);
+  top:50%;
+  transition:0.3s;
+}
+.slide-menu {
+  width: 300px;
+  height: 100vh;
+  background: #ffffff;
+  position: fixed;
+  top: 0;
+  right: 0;
+  z-index: 10;
+  transform: translateX(100%);
+  transition: 0.3s;
+}
+  @media screen and (min-width: 768px){
+   .slide-menu{
+      display: none!important;
+    }
+    
+  }
+.slide-menu.opened {
+  box-shadow: 0px 0px 12px 0px #000;
+  transform: translateX(0%);
+  transition: 0.3s;
+}
+.slide-menu ul{
+  
+  padding: 80 0 0 20;
+  text-decoration: none;
+}
+.slide-menu ul li {
+  text-decoration: none;
+ list-style-type: none;
+ padding-bottom: 15px;
+}
+.slide-menu ul li a {
+
+  text-decoration: none;
+   font-size: 16px;
+   color: #000000;
+   margin-right: 40px;
+   align-items: center;
+
+
+  }
+.slide-menu ul li button {
+  text-decoration: none;
+  border: solid 1px #000000;
+  width: 187px;
+    height: 36px;
+    color: #000000;
+    background-color: #ffffff;
+    font-size: 16px;
+    border-radius: 4px;
+
+
+}
+.slide-menu ul li button:hover{
+opacity: 50%;
+}
+
+
 .menu{
 	margin-left: 35%;
 	display: flex;
@@ -37,8 +156,13 @@ body {
 	text-decoration: none;
 	position: relative;
 
-
 }
+  @media screen and (max-width: 768px){
+    .menu{
+      display: none!important;
+    }
+    
+  }
 .menu ul{
 	display: flex;
 	padding: 0;
@@ -87,6 +211,7 @@ opacity: 50%;
 	
 	display: flex;
 	min-height: 100vh;
+  min-width: 1440;
 	background-color: #000000;
 	
 	
